# agentic-research-assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  Makefile  README.md  REAL_MODE.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
data/corpus/: agentic-rag.md  chunking.md  embeddings.md  hallucination.md  hybrid-search.md  prompt-engineering.md  query-transformation.md  rag-evaluation.md  reranking.md  retrieval-methods.md  vector-databases.md
eval/: __init__.py  run_eval.py  tasks.jsonl
src/agent/: __init__.py  api.py  cache.py  config.py  context.py  dspy_metric.py  dspy_modules.py  graph.py  guardrails.py  llm.py  metrics.py  observability.py  optimize.py  runner.py  schemas.py  textutil.py
src/agent/agents/: __init__.py  _common.py  critic.py  planner.py  researcher.py  writer.py
src/agent/tools/: __init__.py  documents.py  fetch.py  search.py
tests/: conftest.py  test_api.py  test_approval.py  test_budget.py  test_config.py  test_critic_loop.py  test_dspy.py  test_eval.py  test_guardrails.py  test_observability.py  test_pipeline.py  test_research_depth.py  test_robustness.py  test_tools.py
ui/: streamlit_app.py
