[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-research-assistant"
version = "0.1.0"
description = "A multi-agent Research & Report Assistant orchestrated with LangGraph that runs fully keyless and never fabricates sources."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Baron Purwa Hartono", email = "Baron197@users.noreply.github.com" }]
keywords = ["langgraph", "agents", "rag", "evaluation", "observability"]

dependencies = [
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",
]

[project.optional-dependencies]
# Heavy / real-mode only. The keyless path needs NONE of these.
real = ["openai>=1.30"]
ui = ["streamlit>=1.33"]
dev = ["ruff>=0.4", "pytest>=8.0"]
# Optional DSPy track (declarative modules + metric-driven prompt optimization).
dspy = ["dspy-ai>=3.0,<4"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501", "UP017"]  # UP017 wants datetime.UTC (3.11-only); spec mandates timezone.utc

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore:Using .*starlette.testclient.*",
]
